# squid-map

./: .gitignore  demo_map.rviz
catkin_ws/: output.txt
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/.private/elevation_mapping/: .catkin  local_setup.sh
catkin_ws/devel/.private/mapping/: .catkin  _setup_util.py
catkin_ws/devel/lib/mapping/: transform_pointcloud_node
catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  mapping.pc
catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws/devel/share/mapping/cmake/: mappingConfig-version.cmake  mappingConfig.cmake
catkin_ws/logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
catkin_ws/logs/elevation_mapping/: build.cmake.000.log.stderr
catkin_ws/logs/mapping/: build.check.000.log.stderr  build.check.001.log.stderr  build.check.002.log.stderr  build.check.022.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.011.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr  build.make.041.log.stderr  build.make.042.log.stderr  build.make.047.log.stderr  build.make.049.log.stderr  build.make.055.log.stderr  build.make.056.log.stderr  build.make.057.log.stderr  build.make.070.log.stderr  build.make.072.log.stderr  build.make.074.log.stderr  build.make.075.log.stderr  build.make.099.log.stderr  build.make.104.log.stderr  build.make.125.log.stderr  build.make.126.log.stderr  build.make.128.log.stderr  build.make.141.log.stderr  build.make.142.log.stderr  build.make.144.log.stderr  build.make.146.log.stderr  (+5 more)
catkin_ws/src/mapping/: CMakeLists.txt  package.xml
catkin_ws/src/mapping/config/: mapping.yaml
catkin_ws/src/mapping/src/: quickselect.h  transform_pointcloud.cpp
catkin_ws/src/mapping/urdf/: test.urdf  test.xacro
(+5 files in other folders)
